# camerasim

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/src/: main.cpp
python/: camera_cube_map.py
